[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["dim4ick <romanoff_d@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
